// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeExtensible fails when given an extensible object:  1`] = `
"expect(received).not.toBeExtensible()

Expected value to not be extensible received:
  []
"
`;

exports[`.not.toBeExtensible fails when given an extensible object: [object Object] 1`] = `
"expect(received).not.toBeExtensible()

Expected value to not be extensible received:
  {}
"
`;

exports[`.not.toBeExtensible fails when given an extensible object: undefined 1`] = `
"expect(received).not.toBeExtensible()

Expected value to not be extensible received:
  [Function anonymous]
"
`;

exports[`.toBeExtensible fails when not given an extensible object:  1`] = `
"expect(received).toBeExtensible()

Expected value to be extensible received:
  \\"\\""
`;

exports[`.toBeExtensible fails when not given an extensible object: [object Object] 1`] = `
"expect(received).toBeExtensible()

Expected value to be extensible received:
  {}"
`;

exports[`.toBeExtensible fails when not given an extensible object: [object Object] 2`] = `
"expect(received).toBeExtensible()

Expected value to be extensible received:
  {}"
`;

exports[`.toBeExtensible fails when not given an extensible object: 0 1`] = `
"expect(received).toBeExtensible()

Expected value to be extensible received:
  0"
`;

exports[`.toBeExtensible fails when not given an extensible object: NaN 1`] = `
"expect(received).toBeExtensible()

Expected value to be extensible received:
  NaN"
`;

exports[`.toBeExtensible fails when not given an extensible object: false 1`] = `
"expect(received).toBeExtensible()

Expected value to be extensible received:
  false"
`;

exports[`.toBeExtensible fails when not given an extensible object: null 1`] = `
"expect(received).toBeExtensible()

Expected value to be extensible received:
  null"
`;

exports[`.toBeExtensible fails when not given an extensible object: undefined 1`] = `
"expect(received).toBeExtensible()

Expected value to be extensible received:
  undefined"
`;
